--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id="header">
     <h2> Mi experiencia en </h2>
-    <h1> Space Camp </h1>
+    <h1> el CIT :( </h1>
     <img src="cohete.png" height="50" id="cohete">
   </div>
 
